# tpch6

./: .gitignore  README.md  synth_fixed_point.patch
1DDR/: .gitignore  README.md  encrypt.tmp  psource.sh  sources.tmp.txt  sources.txt
1DDR/design/: .gitignore  cl_dma_pcis_slv.sv  cl_dram_dma_defines.vh  cl_fletcher_aws_1DDR.sv  cl_ila.sv  vhdl
1DDR/design/vhdl/: .fixed_pkg_2008.vhd.swp  .gitignore  .hdl_checker.config  ALU.vhd  AxiTop.gen.vhd  Float_to_Fixed.vhd  Forecast.gen.vhd  Forecast.vhd  Forecast_Mantle.gen.vhd  Forecast_Nucleus.gen.vhd  Forecast_l.gen.vhd  Forecast_pkg.vhd  HashFunc.vhd  MergeOp.vhd  PU.vhd  RRArbiter.vhd  Ram.vhd  ReduceMultiStreams.vhd  ReverseArbiter.vhd  SimTop_tc.gen.vhd  SumOp.vhd  flopoco.vhd  flopoco_small.vhd  mmio.gen.vhd  mmio_pkg.gen.vhd  modelsim.ini  ptoa_wrapper_plain_uncompressed.vhd  wave.do
1DDR/design/work/: _info  _lib.qdb  _lib1_0.qdb
1DDR/ip/: .gitignore
1DDR/ip/cl_axi_interconnect_1m2s/: cl_axi_interconnect.bd  cl_axi_interconnect.bxml  cl_axi_interconnect.dcp  cl_axi_interconnect_sim_netlist.v  cl_axi_interconnect_stub.v  cl_axi_interconnect_stub.vhdl
1DDR/ip/floating_point_0/: floating_point_0.dcp  floating_point_0.veo  floating_point_0.xci  floating_point_0.xml  floating_point_0_sim_netlist.v  floating_point_0_stub.v  (+2 more)
1DDR/software/: CMakeLists.txt
1DDR/software/runtime/: Makefile  sum  sum.cpp  tpch  tpch.cpp
1DDR/software/src/: lib.cpp  lib.h  test_main.cpp
1DDR/verif/: README.md
4DDR/: README.md  psource.sh  sources.txt
4DDR/design/: README.md  cl_dram_dma_defines.vh  cl_fletcher_aws_4DDR.sv
(+176 files in other folders)
